--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -32,7 +32,7 @@
     <div class=dh12>
         <div class='dh12'>
 			<h2><a href="{% url 'news:detail' berita_terbaru.slug %}">{{ berita_terbaru.judul }}</a></h2>
-			<b>{{ berita_terbaru.kategori_tambahan }}</b> Pada {{ berita_terbaru.tgl_post }}<p>
+			<b>{{ berita_terbaru.kategori_tambahan }}</b> Pada {{ berita_terbaru.tgl_post }} WIB<p>
 		</div>
 		<div class='dh6'>
 			<img src='{{ MEDIA_URL}}{{ berita_terbaru.foto }}' width='100%' />
