--- a/news/templates/news/home.html
+++ b/news/templates/news/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'news/base.html' %}
 
 {% block title %}
     Kaba.com : Portal Berita yang katanya Lengkap dan Aktual
