--- a/news/templates/news/detail.html
+++ b/news/templates/news/detail.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block kategori %}
-    {% for count_berita, kat_tam in kategori_tambahan_list_count_berita %}
+    {% for count_berita, kat_tam in kategori_tambahan_count_berita %}
         <a href="{% url 'news:kategori' kat_tam.id 'tambahan' %}" style="width: 100%;"><b>({{ count_berita }})</b> {{ kat_tam }}</a>
     {% endfor %}
 {% endblock %}
@@ -27,9 +27,9 @@
 {% block berita %}
     <div class='dh12' style='text-align:justify'>
 	    <h2>{{ berita.judul }}</h2>
-	    <b>{{ berita.kategori_tambahan }}</b> <small>oleh <b>{{ berita.penulis }}</b> pada <b>{{ berita.tgl_post }}</b> WIB</small><p>
+	    <b>{{ berita.kategori_tambahan }}</b> <small>oleh <b>{{ berita.penulis }}</b> pada <b>{{ berita.tgl_publish }}</b> WIB</small><p>
 	    <img src="{{ MEDIA_URL }}{{ berita.foto }}" width='100%'><p>
-	    {{ berita.header }}<p>
+	    {{ berita.headline }}<p>
 	    {{ berita.isi | safe }}
         <p>&nbsp;</p>	
         <h3>KOMENTARI BERITA INI</h3>
